osprey_worker/src/osprey/engine/stdlib/udfs/tests/test_secret_data/test_secret_type_fails_format_string[with-regular].txt
2 errors occurred while validating:
[1/2] error: assignments can not include non-extractable features if they are not marked Secret
--> main.sml:3:0
     |
   3 | FormattedFoo = f'{Foo}'
     | ^ name 'FormattedFoo' is not marked as non-extractable
[2/2] error: format strings can not include non-extractable features
--> main.sml:3:18
     |
   3 | FormattedFoo = f'{Foo}'
     |                   ^ name 'Foo' is marked as non-extractable
